Restructure for Vercel deployment: convert PHP to HTML, patch portal, add API routes

--- a/index.html
+++ b/index.html
@@ -605,22 +605,22 @@
                         </button>
                         <ul class="kya-nav-menu" id="kyaNavMenu">
                                                             <li>
-                                    <a href="index.php" class="kya-active" title="Home">
+                                    <a href="/index.php" class="kya-active" title="Home">
                                         <span class="kya-nav-icon">🏠</span>
                                         Home                                    </a>
                                 </li>
                                                             <li>
-                                    <a href="about-founder.php" class="" title="About the Founder">
+                                    <a href="/about-founder.php" class="" title="About the Founder">
                                         <span class="kya-nav-icon">👨‍🏫</span>
                                         About the Founder                                    </a>
                                 </li>
                                                             <li>
-                                    <a href="about-us.php" class="" title="About Us">
+                                    <a href="/about-us.php" class="" title="About Us">
                                         <span class="kya-nav-icon">🏢</span>
                                         About Us                                    </a>
                                 </li>
                                                             <li>
-                                    <a href="fees.php" class="" title="Fees">
+                                    <a href="/fees.php" class="" title="Fees">
                                         <span class="kya-nav-icon">💰</span>
                                         Fees                                    </a>
                                 </li>
@@ -1590,19 +1590,19 @@
                     <h4>Main Navigation</h4>
                     <ul>
                                                     <li>
-                                <a href="index.php" class="kya-featured" title="Home">
+                                <a href="/index.php" class="kya-featured" title="Home">
                                     Home                                </a>
                             </li>
                                                     <li>
-                                <a href="about-founder.php" class="" title="About the Founder">
+                                <a href="/about-founder.php" class="" title="About the Founder">
                                     About the Founder                                </a>
                             </li>
                                                     <li>
-                                <a href="about-us.php" class="" title="About Us">
+                                <a href="/about-us.php" class="" title="About Us">
                                     About Us                                </a>
                             </li>
                                                     <li>
-                                <a href="fees.php" class="" title="Fees">
+                                <a href="/fees.php" class="" title="Fees">
                                     Fees                                </a>
                             </li>
                                             </ul>
